[gd_scene load_steps=3 format=3 uid="uid://d0gcx6x26opme"]

[ext_resource type="Script" uid="uid://v3pomw2g8mbq" path="res://scenes/kerajaan_bastera.gd" id="1_o6ebm"]
[ext_resource type="Script" uid="uid://dbqkue1dr7tur" path="res://scenes/line_layer.gd" id="2_rxsqq"]

[node name="Kerajaan Bastera" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_o6ebm")

[node name="SourcesContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 670.0
offset_right = 437.0
offset_bottom = 710.0

[node name="TargetsContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 618.0
offset_top = 520.0
offset_right = 658.0
offset_bottom = 560.0

[node name="LineLayer" type="Control" parent="."]
anchors_preset = 0
scale = Vector2(1, 0.970929)
script = ExtResource("2_rxsqq")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
